docs/release/V3/changelog.md
## 更新日志-正式版(standard)


[平行窗口]

- 优化微博轻享版/微博极速版的平行窗口适配规则

- 优化小米商城的平行窗口适配规则，在Pad端默认分屏比例为0.5

- 优化杉果(com.sonkwoapp)的平行窗口适配规则

- 优化小黑盒(com.max.xiaoheihe)的平行窗口适配规则

- 优化JUMP(com.vgjump.jump)的平行窗口适配规则

- 新增DoDo(com.dodolive.app)的平行窗口适配规则

- 优化小黑盒加速器(com.max.maxaccelerator)的平行窗口适配规则

- 优化雷神加速器(com.nn.accelerator.box)的平行窗口适配规则

- 新增二柄(com.diershoubing.erbing)的平行窗口适配规则

- 新增掌上无畏契约(com.tencent.apps.valorant)的平行窗口适配规则

[应用布局优化]

- 新增SteamPy(com.steampy.app)的应用布局优化，缩放页面元素

- 新增JUMP(com.vgjump.jump)的应用布局优化，缩放页面元素

- 新增小黑盒(com.max.xiaoheihe)的应用布局优化，缩放页面元素

- 新增灵缇游戏加速器(com.lingti.android.ns)的应用布局优化，缩放页面元素

- 新增SwitchBuddy(cz.gemsi.switchbuddy)的应用布局优化，缩放页面元素

- 新增小霸王(xyz.ymyapp.xbw.nearme.gamecenter)的应用布局优化，缩放页面元素

[应用显示比例]

- 优化JUMP(com.vgjump.jump)在未开启平行窗口的情况下，以手机端的比例进行显示

[强制横屏]

- 新增小霸王(xyz.ymyapp.xbw.nearme.gamecenter)的强制横屏适配规则

- 新增SwitchBuddy(cz.gemsi.switchbuddy)的强制横屏适配规则

- 新增SteamPy(com.steampy.app)的强制横屏适配规则

- 新增Vivo浏览器(com.vivo.browser)的强制横屏适配规则

- 新增久久浏览器(com.forever.browser)的强制横屏适配规则

- 新增微米浏览器(com.ume.browser)的强制横屏适配规则

- 新增傲游浏览器(com.mx.browser)的强制横屏适配规则

- 新增米侠浏览器(mixiaba.com.Browser)的强制横屏适配规则

- 新增秘密浏览器(com.first.browser)的强制横屏适配规则

- 新增UA浏览器(com.sljh.uabrowser)的强制横屏适配规则

- 新增Top浏览器(com.pocket.topbrowser)的强制横屏适配规则

- 新增多域浏览器(com.puyi.browser)的强制横屏适配规则

- 新增葡萄浏览器(com.qwh.grapebrowser)的强制横屏适配规则

- 新增宙斯浏览器(com.allzeus.browser/com.tc.browser)的强制横屏适配规则

- 新增千橙浏览器(com.thousand.browser)的强制横屏适配规则

- 新增极鹰浏览器(com.szcx.browser)的强制横屏适配规则

- 新增MotionPro(net.arraynetworks.mobilenow.browser)的强制横屏适配规则

- 新增先锋浏览器(com.charlie.a07073.thunderbirdsbrowser)的强制横屏适配规则

- 新增鲨鱼浏览器(com.zhijianzhuoyue.sharkbrowser)的强制横屏适配规则

- 新增西瓜浏览器(com.duocai.webBrowser)的强制横屏适配规则

- 新增极速浏览器(com.jx.minibrowser)的强制横屏适配规则

- 新增360浏览器极速版(com.qihoo.expressbrowser)的强制横屏适配规则

- 新增360AI云盘(com.qihoo.cloudisk)的强制横屏适配规则

- 新增亿方云(com.egeio.fangcloud)的强制横屏适配规则

- 新增360AI搜索(com.qihoo.aiso)的强制横屏适配规则

- 新增360AI浏览器(com.qihoo.aibrowser)的强制横屏适配规则

- 新增搜狗浏览器(sogou.mobile.explorer)的强制横屏适配规则

- 新增搜狗浏览器极速版(sogou.mobile.explorer.online)的强制横屏适配规则

- 新增UC大字版(com.ucmobile.elder)的强制横屏适配规则

- 新增播放器OPlayer(com.olimsoft.android.oplayer)的强制横屏适配规则

- 新增极速通浏览器(com.szcx.explorer)的强制横屏适配规则

- 新增风云格式工厂(net.windcloud.explorer)的强制横屏适配规则

- 新增完美视频播放器(com.kk.xx.newplayer)的强制横屏适配规则

- 新增Arc Player(com.videoplayer.arcplayer)的强制横屏适配规则

- 新增努比亚应用商店(cn.nubia.neostore)的强制横屏适配规则

- 新增vivo应用商店(com.bbk.appstore)的强制横屏适配规则

- 新增海信应用商店(com.hisense.hiphone.appstore)的强制横屏适配规则

[其他]

- 在折叠屏机型上小黑盒(com.max.xiaoheihe)的平行窗口适配默认为非启用状态



如果是处于测试版(Beta)的模块，可能存在不稳定性以及异常BUG，如遇问题可反馈，反馈Q群：277757185

模块首页:[https://hyper-magic-window.sothx.com/](https://hyper-magic-window.sothx.com/)

历史更新日志请点击:[https://github.com/sothx/mipad-magic-window/releases](https://github.com/sothx/mipad-magic-window/releases)

自定义规则:[https://hyper-magic-window.sothx.com/custom-config.html](https://hyper-magic-window.sothx.com/custom-config.html)

问题合集:[https://hyper-magic-window.sothx.com/FAQ.html](https://hyper-magic-window.sothx.com/FAQ.html)

提交适配需求或者缺陷请点击:[https://github.com/sothx/mipad-magic-window/issues](https://github.com/sothx/mipad-magic-window/issues)
